@@ -1,28 +1,7 @@
-/**
- *   This file is part of Skript.
- *
- *  Skript is free software: you can redistribute it and/or modify
- *  it under the terms of the GNU General Public License as published by
- *  the Free Software Foundation, either version 3 of the License, or
- *  (at your option) any later version.
- *
- *  Skript is distributed in the hope that it will be useful,
- *  but WITHOUT ANY WARRANTY; without even the implied warranty of
- *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- *  GNU General Public License for more details.
- *
- *  You should have received a copy of the GNU General Public License
- *  along with Skript.  If not, see <http://www.gnu.org/licenses/>.
- *
- * Copyright Peter Güttinger, SkriptLang team and contributors
- */
 package ch.njol.skript.classes.registry;
 
 import ch.njol.skript.classes.Parser;
 import ch.njol.skript.lang.ParseContext;
-import ch.njol.skript.localization.Language;
-import ch.njol.skript.localization.Noun;
-import ch.njol.util.NonNullPair;
 import ch.njol.util.StringUtils;
 import org.bukkit.Keyed;
 import org.bukkit.NamespacedKey;
@@ -34,7 +13,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 /**
  * A parser based on a {@link Registry} used to parse data from a string or turn data into a string.
@@ -44,17 +22,13 @@ import java.util.stream.Collectors;
 public class RegistryParser<R extends Keyed> extends Parser<R> {
 
 	private final Registry<R> registry;
-	private final String languageNode;
 
 	private final Map<R, String> names = new HashMap<>();
 	private final Map<String, R> parseMap = new HashMap<>();
 
-	public RegistryParser(Registry<R> registry, String languageNode) {
-		assert !languageNode.isEmpty() && !languageNode.endsWith(".") : languageNode;
+	public RegistryParser(Registry<R> registry) {
 		this.registry = registry;
-		this.languageNode = languageNode;
 		refresh();
-		Language.addListener(this::refresh);
 	}
 
 	private void refresh() {
@@ -65,51 +39,35 @@ public class RegistryParser<R extends Keyed> extends Parser<R> {
 			String namespace = namespacedKey.getNamespace();
 			String key = namespacedKey.getKey();
 			String keyWithSpaces = key.replace("_", " ");
-			String languageKey = languageNode + "." + key;
 
+			String namespacedKeyString = namespacedKey.toString();
 			// Put the full namespaced key as a pattern
-			parseMap.put(namespacedKey.toString(), registryObject);
+			putInMapWithArticle(namespacedKeyString, registryObject);
 
 			// If the object is a vanilla Minecraft object, we'll add the key with spaces as a pattern
 			if (namespace.equalsIgnoreCase(NamespacedKey.MINECRAFT)) {
-				parseMap.put(keyWithSpaces, registryObject);
-			}
-
-			String[] options = Language.getList(languageKey);
-			// Missing/Custom registry objects
-			if (options.length == 1 && options[0].equals(languageKey.toLowerCase(Locale.ENGLISH))) {
-				if (namespace.equalsIgnoreCase(NamespacedKey.MINECRAFT)) {
-					// If the object is a vanilla Minecraft object, we'll use the key with spaces as a name
-					names.put(registryObject, keyWithSpaces);
-				} else {
-					// If the object is a custom object, we'll use the full namespaced key as a name
-					names.put(registryObject, namespacedKey.toString());
-				}
+				putInMapWithArticle(keyWithSpaces, registryObject);
+				putInMapWithArticle(key, registryObject);
+				names.put(registryObject, keyWithSpaces);
 			} else {
-				for (String option : options) {
-					option = option.toLowerCase(Locale.ENGLISH);
-
-					// Isolate the gender if one is present
-					NonNullPair<String, Integer> strippedOption = Noun.stripGender(option, languageKey);
-					String first = strippedOption.getFirst();
-					Integer second = strippedOption.getSecond();
-
-					// Add to name map if needed
-					names.putIfAbsent(registryObject, first);
-
-					parseMap.put(first, registryObject);
-					if (second != -1) { // There is a gender present
-						parseMap.put(Noun.getArticleWithSpace(second, Language.F_INDEFINITE_ARTICLE) + first, registryObject);
-					}
-				}
+				names.put(registryObject, namespacedKeyString);
 			}
 		}
+	}
+
+	private void putInMapWithArticle(String key, R object) {
+		this.parseMap.put(key, object);
+		String article = switch (key.charAt(0)) {
+			case 'a', 'e', 'i', 'o', 'u' -> "an";
+			default -> "a";
+		};
+		this.parseMap.put(article + " " + key, object);
 	}
 
 	/**
 	 * This method attempts to match the string input against one of the string representations of the registry.
 	 *
-	 * @param input a string to attempt to match against one in the registry.
+	 * @param input   a string to attempt to match against one in the registry.
 	 * @param context of parsing, may not be null
 	 * @return The registry object matching the input, or null if no match could be made.
 	 */
@@ -146,7 +104,7 @@ public class RegistryParser<R extends Keyed> extends Parser<R> {
 	 * Note that some entries may represent the same registry object.
 	 */
 	public String getAllNames() {
-		List<String> strings = parseMap.keySet().stream().filter(s -> !s.startsWith("minecraft:")).sorted().collect(Collectors.toList());
+		List<String> strings = this.names.values().stream().sorted().toList();
 		return StringUtils.join(strings, ", ");
 	}
 
